Bug 2010417 - Add error handling on assistant responses r=ai-frontend-reviewers,fluent-reviewers,mlucks,flod
[[ https://www.figma.com/design/5KuePTGmOEUFyCHBHCsGim/AI-Mode-%E2%80%94%C2%A0MVP-Scope-Design?node-id=10240-30083&m=dev | Figma ]]

Overall of what was implemented based on Figma and slack threads with people from back-end and front-end teams (btw, thanks team!).
| Code | Error	                      | Has action button?     | Notes |
| 400   | general errors         | No	                             | Fallback for all other errors. Temporary text/copy |
| 413   | chat max length     | Yes, clear chat             | - |
| 413   | message too long  | No	                             | this could be a front-end check first, so we can leave 413 for the chat max length? |
| 429   | over budget           | Yes, switch to classic   | - |
| 500   | connection loss.    | Yes, retry                       | - |

**What was updated?**
- The smart bar and the `ai-chat-content` widths to use `--size-item-xsmall` (fixed pixel instead of rem) to avoid inconsistencies in the width of both - my understanding is that they need to be the exact same width and they weren't
- Created a new component for the errors (header + body + button - only header is required)

**What I would like to update in a follow up ticket:**
- Add functionality and make all action buttons visible
- Add tests
- Add a check for chat max width and show the error message without sending a back-end request
- Update copy based on UX team inputs

Differential Revision: https://phabricator.services.mozilla.com/D281639

--- a/browser/components/aiwindow/ui/components/ai-window/ai-window.css
+++ b/browser/components/aiwindow/ui/components/ai-window/ai-window.css
@@ -64,6 +64,7 @@
 #ai-window-smartbar {
   grid-area: smartbar;
   width: 100%;
+  max-width: calc(var(--size-item-xsmall) * 45.5);
 }
 
 smartwindow-prompts {
